# Lesson_27_HW_Django

./: README.md  pyproject.toml
Avito/: asgi.py  settings.py  urls.py  wsgi.py
ads/: forms.py  models.py  urls.py  views.py
ads/management/commands/: loadfixtures.py
ads/migrations/: 0001_initial.py
categories/: forms.py  models.py  urls.py  views.py
categories/migrations/: 0001_initial.py
